# WifiShare

./: .gitignore  README.md
android/: WifiShare-debug.apk  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/iaw/lanshare/: DownloadClient.kt  MainActivity.kt  PairingConfigParser.kt  PendingDownload.kt  PinnedTls.kt  SettingsActivity.kt  SettingsStore.kt  ShareIntentParser.kt  TransferConfig.kt  UploadClient.kt
android/app/src/main/res/drawable/: bg_app.xml  button_outline.xml  button_primary.xml  button_secondary.xml  card_surface.xml  ic_launcher_foreground.xml  input_surface.xml  status_pill.xml  text_button_surface.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml
server/: README.md  env.fish  env.sh  phone  pyproject.toml  serve
server/lss_server/: __init__.py  certs.py  config.py  env.py  files.py  httpd.py  main.py  outbox.py  pairing.py
server/systemd/: server.env.example  wifishare.service
server/tests/: test_server.py
